Abstracting embedding models; adding Chorus model